// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexibleRow Snapshot Tests Render 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "backgroundColor": undefined,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "height": undefined,
        "justifyContent": "flex-start",
        "margin": undefined,
        "marginBottom": undefined,
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": undefined,
        "width": undefined,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#E2E2E2",
          "borderBottomWidth": 0.5,
          "borderLeftColor": "#E2E2E2",
          "borderLeftWidth": 0.5,
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    accessibilityLabel="redibs-ucl.flexible-row"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexGrow": 1,
        "opacity": 1,
      }
    }
    testID="redibs-ucl.flexible-row"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "height": undefined,
          "minHeight": 42,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          accessibilityLabel="redibs-ucl.flex-row.main-content"
          style={
            Array [
              Object {
                "fontFamily": "Mulish-Regular",
                "fontSize": 16,
                "fontWeight": "normal",
                "lineHeight": 20,
              },
              Object {
                "color": "#121212",
                "textAlign": undefined,
                "textDecorationLine": undefined,
              },
            ]
          }
          testID="redibs-ucl.flex-row.main-content"
        >
          Text
        </Text>
      </View>
      <View
        accessibilityLabel="redibs-ucl.flex-row.right-arrow"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
        testID="redibs-ucl.flex-row.right-arrow"
      >
        <actions-chevron-right-line.svg
          alwaysDark="#121212"
          alwaysLight="#FFFFFF"
          basalt="#8A8A8A"
          crystal="#FFFFFF"
          crystalHover="#F7F7F7"
          crystalPressed="#EEEEEE"
          disabled="#FAFAFA"
          glacialBlue="#3D98D2"
          granite="#ABABAB"
          larchYellow="#F4BE19"
          larchYellowHover="#F5D624"
          larchYellowPressed="#F3A70C"
          limestone="#E2E2E2"
          limestoneHover="#EEEEEE"
          limestonePressed="#D0D0D0"
          obsidian="#121212"
          overlay="rgba(18,18,18,0.3)"
          paintbrushRed="#E05666"
          green="#00A87E"
          greenHighlight="#DEF3EC"
          greenHover="#43B893"
          greenPressed="#00986A"
          quartz="#FAFAFA"
          tintColor="#ABABAB"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "backgroundColor": undefined,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "height": undefined,
        "justifyContent": "flex-start",
        "margin": undefined,
        "marginBottom": undefined,
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": undefined,
        "width": undefined,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#E2E2E2",
          "borderBottomWidth": 0.5,
          "borderLeftColor": "#E2E2E2",
          "borderLeftWidth": 0.5,
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`FlexibleRow Snapshot Tests Render with extended margins 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "backgroundColor": undefined,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "height": undefined,
        "justifyContent": "flex-start",
        "margin": undefined,
        "marginBottom": undefined,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": undefined,
        "width": undefined,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#E2E2E2",
          "borderBottomWidth": 0.5,
          "borderLeftColor": "#E2E2E2",
          "borderLeftWidth": 0.5,
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    accessibilityLabel="redibs-ucl.flexible-row"
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flexGrow": 1,
        "opacity": 1,
      }
    }
    testID="redibs-ucl.flexible-row"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "height": undefined,
          "minHeight": 42,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          accessibilityLabel="redibs-ucl.flex-row.main-content"
          style={
            Array [
              Object {
                "fontFamily": "Mulish-Regular",
                "fontSize": 16,
                "fontWeight": "normal",
                "lineHeight": 20,
              },
              Object {
                "color": "#121212",
                "textAlign": undefined,
                "textDecorationLine": undefined,
              },
            ]
          }
          testID="redibs-ucl.flex-row.main-content"
        >
          Text
        </Text>
      </View>
      <View
        accessibilityLabel="redibs-ucl.flex-row.right-arrow"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
        testID="redibs-ucl.flex-row.right-arrow"
      >
        <actions-chevron-right-line.svg
          alwaysDark="#121212"
          alwaysLight="#FFFFFF"
          basalt="#8A8A8A"
          crystal="#FFFFFF"
          crystalHover="#F7F7F7"
          crystalPressed="#EEEEEE"
          disabled="#FAFAFA"
          glacialBlue="#3D98D2"
          granite="#ABABAB"
          larchYellow="#F4BE19"
          larchYellowHover="#F5D624"
          larchYellowPressed="#F3A70C"
          limestone="#E2E2E2"
          limestoneHover="#EEEEEE"
          limestonePressed="#D0D0D0"
          obsidian="#121212"
          overlay="rgba(18,18,18,0.3)"
          paintbrushRed="#E05666"
          green="#00A87E"
          greenHighlight="#DEF3EC"
          greenHover="#43B893"
          greenPressed="#00986A"
          quartz="#FAFAFA"
          tintColor="#ABABAB"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "backgroundColor": undefined,
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "height": undefined,
        "justifyContent": "flex-start",
        "margin": undefined,
        "marginBottom": undefined,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": undefined,
        "width": undefined,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#E2E2E2",
          "borderBottomWidth": 0.5,
          "borderLeftColor": "#E2E2E2",
          "borderLeftWidth": 0.5,
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;
